login project success

--- a/cmfz/src/main/resources/application.yml
+++ b/cmfz/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 server:
-  port: 8990
+  port: 8988
   jsp-servlet:
     init-parameters:
       development: true
+
+  context-path: /cmfz
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
