--- a/cmfz/src/main/resources/application.yml
+++ b/cmfz/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8988
+  port: 8970
   jsp-servlet:
     init-parameters:
       development: true
@@ -8,7 +8,7 @@ server:
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://127.0.0.1:3306/chiming
+    url: jdbc:mysql://127.0.0.1:3306/cmfz
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
@@ -20,5 +20,7 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 100MB
+
+
 mybatis:
   type-aliases-package: com.baizhi.entity
